# BlackJack_Game

./: .gitignore  BlackJack_Rules.txt  CMakeLists.txt  README.md  main.cpp
Game/: AIPlayer.cpp  AIPlayer.h  CMakeLists.txt  Cards.cpp  Cards.h  Dealer.cpp  Dealer.h  Game.cpp  Game.h  Hand.cpp  Hand.h  Player.cpp  Player.h  RealPlayer.cpp  RealPlayer.h  UsefulFunctions.cpp  UsefulFunctions.h  iCardGame.cpp  iCardGame.h
Game/Cards/: CMakeLists.txt  Cards.cpp  Cards.h
Game/Dealer/: CMakeLists.txt  Dealer.cpp  Dealer.h
Game/Hand/: CMakeLists.txt  Hand.cpp  Hand.h
Game/Player/: CMakeLists.txt  Player.cpp  Player.h
Game/Tests/: Cards_tests.cpp  Hand_tests.cpp  UsefulFunctions_test.cpp
Game/iCardGame/: CMakeLists.txt  iCardGame.cpp  iCardGame.h
Preparation/: BlackJack_Rules (ENG).txt  BlackJack_Rules (RUS).txt  UML_Class_Diagram.vsdx  UML_Diagram.drawio
